<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Log Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="test_string">This is a test string</string>
    
    <string name="callsin_string">Total Incoming Calls:</string>
    <string name="callsout_string">Total Outgoing Calls:</string>
    <string name="callstotal_string">Total Calls:</string>
    <string name="totaltalk_string">Total Talk Time:</string>
    <string name="textsin_string">Total Incoming Texts:</string>
    <string name="textsout_string">Total Texts Sent:</string>
    <string name="textstotal_string">Total Texts Sent/Recvd:</string>
    <string name="topcallsIN_string">Contact who called most:</string>
    <string name="topcallsOUT_string">Contact you called most:</string>
    <string name="toptextin_string">Top Contact Texts Recvd:</string>
    <string name="toptextout_string">Top Contact Texts Sent:</string>
	<string name="rawData_string">View Raw Data</string>
	<string name="numCalls_string">Number of Calls:</string>
	<string name="numText_string">Number of Texts:</string>
    
    
</resources>
